<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="Quiz">#QUIZ</string>
    <string name="btnjogar">JOGAR</string>
   	<string name="hello_world">Hello world!</string>
    <string name="pergunta1">Quantos gols ronaldo tem em copas?</string>
    <string name="Radio1QuestaoUm">10</string>
    <string name="Radio2QuestaoUm">9</string>
    <string name="Radio3QuestaoUm">15</string>
    <string name="Radio4QuestaoUm">19</string>
    <string name="Proximo">Próximo</string>
    <string name="title_activity_tela_dois">TelaDoisActivity</string>
    <string name="pergunta2">Quem é o maior artilheiro em copas do mundo?</string>
    <string name="Radio1QuestaoDois">Zidane</string>
    <string name="Radio2QuestaoDois">Pelé</string>
    <string name="Radio3QuestaoDois">Maradona</string>
    <string name="Radio4QuestaoDois">Ronaldo</string>
    <string name="Proximo2">Próximo</string>
    <string name="title_activity_tela_tres">TelaTresActivity</string>
    <string name="pergunta3">O Revolucionário termo WWW(World Wie Wibe) foi criado por?</string>
    <string name="Radio1QuestaoTres">Paul Baran</string>
    <string name="Radio2QuestaoTres">Tim Berners-Lee</string>
    <string name="Radio3QuestaoTres">Bill Gates</string>
    <string name="Radio4QuestaoTres">Mark Zuckerberg</string>
    <string name="Proximo3">Próximo</string>
    <string name="title_activity_tela_quatro">TelaQuatroActivity</string>
    <string name="pergunta4">Qual o nome da sigla HTML?</string>
    <string name="Radio1QuestaoQuatro">Hyper Text Merchandising Language</string>
    <string name="Radio2QuestaoQuatro">Hyper Text Markup Legend</string>
    <string name="Radio3QuestaoQuatro">Hyper Teste Markup Language</string>
    <string name="Radio4QuestaoQuatro">Hyper Text Markup Language</string>
    <string name="Proximo4">Próximo</string>
    <string name="title_activity_tela_cinco">TelaCincoActivity</string>
    <string name="pergunta5">Famoso farol da antiguidade. Uma das sete maravilhas do mundo antigo.</string>
    <string name="Radio1QuestaoCinco">Macedônia</string>
    <string name="Radio2QuestaoCinco">Alexandria</string>
    <string name="Radio3QuestaoCinco">Taj Mahal</string>
    <string name="Radio4QuestaoCinco">Stonehenge</string>
    <string name="btnFim">Fim</string>
    <string name="title_activity_fim">FimActivity</string>
    <string name="FimJogo">FIM DE JOGO!!!</string>
    <string name="Resultado"></string>
    <string name="btnsair">Sair</string>
    
</resources>
