<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaCincoActivity" >

    <TextView
        android:id="@+id/pergunta5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/pergunta5" />

    <RadioGroup
        android:id="@+id/radioGroupQ5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pergunta5"
        android:layout_marginTop="27dp" >

        <RadioButton
            android:id="@+id/radio1QuestaoCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           	android:text="@string/Radio1QuestaoCinco" />

        <RadioButton
            android:id="@+id/radio2QuestaoCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio2QuestaoCinco" />

        <RadioButton
            android:id="@+id/radio3QuestaoCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio3QuestaoCinco" />
    
    
    	<RadioButton
            android:id="@+id/radio4QuestaoCinco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio4QuestaoCinco" />
    
    
    
    </RadioGroup>

    <Button
        android:id="@+id/btnFim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/btnFim" />

</RelativeLayout>
