<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaQuatroActivity" >

    <TextView
        android:id="@+id/pergunta4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/pergunta4" />

    <RadioGroup
        android:id="@+id/radioGroupQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pergunta4"
        android:layout_marginTop="25dp" >

        <RadioButton
            android:id="@+id/radio1QuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/Radio1QuestaoQuatro"/>

        <RadioButton
            android:id="@+id/radio2QuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio2QuestaoQuatro" />

        <RadioButton
            android:id="@+id/radio3QuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio3QuestaoQuatro" />
    
    	 <RadioButton
            android:id="@+id/radio4QuestaoQuatro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio4QuestaoQuatro" />
    
    
    </RadioGroup>

    <Button
        android:id="@+id/btnProximo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/Proximo4" />

</RelativeLayout>