<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaTresActivity" >

    <TextView
        android:id="@+id/pergunta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/pergunta3" />

    <RadioGroup
        android:id="@+id/radioGroupQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pergunta3"
        android:layout_below="@+id/pergunta3"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:id="@+id/radio1QuestaoTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio1QuestaoTres" />

        <RadioButton
            android:id="@+id/radio2QuestaoTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio2QuestaoTres" />

        <RadioButton
            android:id="@+id/radio3QuestaoTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio3QuestaoTres" />
   
   		<RadioButton
            android:id="@+id/radio4QuestaoTres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio4QuestaoTres" />
        
        
        </RadioGroup>

    <Button
        android:id="@+id/btnProximo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/pergunta3"
        android:text="@string/Proximo3" />

</RelativeLayout>