<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".JogarActivity" >

    <TextView
        android:id="@+id/pergunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/pergunta1" />

    <RadioGroup
        android:id="@+id/radioGroupQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pergunta1"
        android:layout_below="@+id/pergunta1"
        android:layout_marginTop="21dp" >

        <RadioButton
            android:id="@+id/radio1QuestaoUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio1QuestaoUm" />

        <RadioButton
            android:id="@+id/radio2QuestaoUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio2QuestaoUm" />

        <RadioButton
            android:id="@+id/radio3QuestaoUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio3QuestaoUm" />
        
        <RadioButton
            android:id="@+id/radio4QuestaoUm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio4QuestaoUm" />
        
        
        
        
    </RadioGroup>

    <Button
        android:id="@+id/btnProximo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="17dp"
        android:text="@string/Proximo" />

</RelativeLayout>